Align menu correctly

--- a/main.scss
+++ b/main.scss
@@ -222,6 +222,12 @@ body {
 	}
 }
 
+.o-hierarchical-nav__more--all {
+	[data-o-hierarchical-nav-level] {
+		right: 0;
+	}
+}
+
 .shipit {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
